# ErrorShyCMakeProject

./: .gitignore  CMakeLists.txt  Proj_Makefile  README.md  my_sdk_import.cmake
app/: CMakeLists.txt  main.c
src/: CMakeLists.txt  mylib.c  mylib.h
test/: CMakeLists.txt  test_myexample.c
test/internals/: gem_installation_path.sh  project_aix.yml  project_linux.yml
